--- a/apps/b2c/i18n/no/messages.xml
+++ b/apps/b2c/i18n/no/messages.xml
@@ -359,16 +359,16 @@
                 <target>Det er foreløpig ingen SMS-poster å vise.</target>
             </trans-unit>
             <trans-unit id="88" translate="yes" reformat="yes" xml:space="default">
-                <source>Tell your friends about Wls &amp; tjene ekstra balanse!</source>
-                <target>Fortell vennene dine om WLS &amp; </target>
+                <source>Tell your friends about Zapna &amp; tjene ekstra balanse!</source>
+                <target>Fortell vennene dine om Zapna &amp; </target>
             </trans-unit>
             <trans-unit id="89" translate="yes" reformat="yes" xml:space="default">
-                <source>Tell your friends about Wls and earn 10 euro as soon as your friends have made their first payment with Wls! Spread the word about Wls and let your friends know about WLS2 services.</source>
-                <target>Fortell vennene dine om WLS og tjene 10 euro så snart dine venner har gjort sin første innbetaling med WLS! Spre ordet om WLS og la vennene dine om WLS2 tjenester.</target>
+                <source>Tell your friends about Zapna and earn 10 euro as soon as your friends have made their first payment with Zapna! Spread the word about Zapna and let your friends know about Zapna2 services.</source>
+                <target>Fortell vennene dine om Zapna og tjene 10 euro så snart dine venner har gjort sin første innbetaling med Zapna! Spre ordet om Zapna og la vennene dine om Zapna2 tjenester.</target>
             </trans-unit>
             <trans-unit id="90" translate="yes" reformat="yes" xml:space="default">
-                <source>You can tell your friends about Wls in two simple ways:</source>
-                <target>Du kan fortelle dine venner om WLS i to enkle måter:</target>
+                <source>You can tell your friends about Zapna in two simple ways:</source>
+                <target>Du kan fortelle dine venner om Zapna i to enkle måter:</target>
             </trans-unit>
             <trans-unit id="91" translate="yes" reformat="yes" xml:space="default">
                 <source>Fill out the fields below and click the Send Email button - your friend will receive an Email</source>
@@ -379,8 +379,8 @@
                 <target>Hva får du av dette?</target>
             </trans-unit>
             <trans-unit id="93" translate="yes" reformat="yes" xml:space="default">
-                <source>As soon as your friends have made their first payment with Wls, youll automatically receive 10 euro in your Wls balance - so if 10 of your friends register on Wls, youll gain 100 euro in your account. Just share the news and enjoy this great new treat from Wls.</source>
-                <target>Så snart dine venner har gjort sin første innbetaling med WLS, youll automatisk motta 10 euro i din WLS balanse - så hvis 10 av vennene dine registrerer seg på WLS, youll få 100 euro på kontoen din. Bare dele nyhetene og nyte denne flotte nye godbiten fra WLS.</target>
+                <source>As soon as your friends have made their first payment with Zapna, youll automatically receive 10 euro in your Zapna balance - so if 10 of your friends register on Zapna, youll gain 100 euro in your account. Just share the news and enjoy this great new treat from Zapna.</source>
+                <target>Så snart dine venner har gjort sin første innbetaling med Zapna, youll automatisk motta 10 euro i din Zapna balanse - så hvis 10 av vennene dine registrerer seg på Zapna, youll få 100 euro på kontoen din. Bare dele nyhetene og nyte denne flotte nye godbiten fra Zapna.</target>
             </trans-unit>
       
             <trans-unit id="94" translate="yes" reformat="yes" xml:space="default">
@@ -701,8 +701,8 @@
                 <target>er sendt</target>
             </trans-unit>
             <trans-unit id="172" translate="yes" reformat="yes" xml:space="default">
-                <source>Tell a friend about Wls!</source>
-                <target>Tips en venn om WLS!</target>
+                <source>Tell a friend about Zapna!</source>
+                <target>Tips en venn om Zapna!</target>
             </trans-unit>
             <trans-unit id="173" translate="yes" reformat="yes" xml:space="default">
                 <source>HI</source>
@@ -748,8 +748,8 @@
                 <target>SmartSim inkludert pot</target>
             </trans-unit>
             <trans-unit id="183" translate="yes" reformat="yes" xml:space="default">
-                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming wls2 Customer. We welcome you to a new and huge mobile world. </source>
-                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli wls2 Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden. </target>
+                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming Zapna2 Customer. We welcome you to a new and huge mobile world. </source>
+                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli Zapna2 Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden. </target>
             </trans-unit>
             <trans-unit id="184" translate="yes" reformat="yes" xml:space="default">
                 <source>Your customer number is </source>
@@ -776,16 +776,16 @@
                 <target></target>
             </trans-unit>
             <trans-unit id="190" translate="yes" reformat="yes" xml:space="default">
-                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming wls2 Customer. We welcome you to a new and huge mobile world.</source>
-                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli wls2 Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden.</target>
+                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming Zapna2 Customer. We welcome you to a new and huge mobile world.</source>
+                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli Zapna2 Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden.</target>
             </trans-unit>
             <trans-unit id="191" translate="yes" reformat="yes" xml:space="default">
                 <source>Your Password have been saved.</source>
                 <target>Ditt passord er lagret.</target>
             </trans-unit>
             <trans-unit id="192" translate="yes" reformat="yes" xml:space="default">
-                <source>WLS2 invitation</source>
-                <target>WLS2 invitasjon</target>
+                <source>Zapna2 invitation</source>
+                <target>Zapna2 invitasjon</target>
             </trans-unit>
             <trans-unit id="193" translate="yes" reformat="yes" xml:space="default">
                 <source>Hi </source>
@@ -796,8 +796,8 @@
                 <target>Denne invitasjonen er sendt til deg med referanse til</target>
             </trans-unit>
             <trans-unit id="195" translate="yes" reformat="yes" xml:space="default">
-                <source>a user of Smartsim from the WLS2.</source>
-                <target>en bruker av SmartSim fra WLS2</target>
+                <source>a user of Smartsim from the Zapna2.</source>
+                <target>en bruker av SmartSim fra Zapna2</target>
             </trans-unit>
             <trans-unit id="196" translate="yes" reformat="yes" xml:space="default">
                 <source>Please click accept to start saving money immediately with Smartsim.</source>
@@ -816,8 +816,8 @@
                 <target>Les mer</target>
             </trans-unit>
             <trans-unit id="200" translate="yes" reformat="yes" xml:space="default">
-                <source>Your password has been changed. Please use the following information to login to your WLS2 account.</source>
-                <target>Ditt passord er endret. Vennligst bruk følgende informasjon for å logge på WLS2 konto.</target>
+                <source>Your password has been changed. Please use the following information to login to your Zapna2 account.</source>
+                <target>Ditt passord er endret. Vennligst bruk følgende informasjon for å logge på Zapna2 konto.</target>
             </trans-unit>
             <trans-unit id="201" translate="yes" reformat="yes" xml:space="default">
                 <source>Mobile Number: %s</source>
@@ -938,8 +938,8 @@
             </trans-unit>
 
     <trans-unit id="230" translate="yes" reformat="yes" xml:space="default">
-                <source>We hereby confirm that you have received commissions deposited into your account that you have referred a friend about Smartsim from wls.Go in to "Payment History" to see what you have earned.</source>
-                <target>Vi bekrefter at du har mottatt bestillinger inn på kontoen din som du har henvist en venn om SmartSim fra wls.Go i å "Payment History" for å se hva du har tjent.</target>
+                <source>We hereby confirm that you have received commissions deposited into your account that you have referred a friend about Smartsim from Zapna.Go in to "Payment History" to see what you have earned.</source>
+                <target>Vi bekrefter at du har mottatt bestillinger inn på kontoen din som du har henvist en venn om SmartSim fra Zapna.Go i å "Payment History" for å se hva du har tjent.</target>
             </trans-unit>
 
     <trans-unit id="231" translate="yes" reformat="yes" xml:space="default">
