--- a/apps/b2c/i18n/no/messages.xml
+++ b/apps/b2c/i18n/no/messages.xml
@@ -363,8 +363,8 @@
                 <target>Fortell vennene dine om Zapna &amp; </target>
             </trans-unit>
             <trans-unit id="89" translate="yes" reformat="yes" xml:space="default">
-                <source>Tell your friends about Zapna and earn 10 euro as soon as your friends have made their first payment with Zapna! Spread the word about Zapna and let your friends know about Zapna2 services.</source>
-                <target>Fortell vennene dine om Zapna og tjene 10 euro så snart dine venner har gjort sin første innbetaling med Zapna! Spre ordet om Zapna og la vennene dine om Zapna2 tjenester.</target>
+                <source>Tell your friends about Zapna and earn 10 euro as soon as your friends have made their first payment with Zapna! Spread the word about Zapna and let your friends know about Zapna services.</source>
+                <target>Fortell vennene dine om Zapna og tjene 10 euro så snart dine venner har gjort sin første innbetaling med Zapna! Spre ordet om Zapna og la vennene dine om Zapna tjenester.</target>
             </trans-unit>
             <trans-unit id="90" translate="yes" reformat="yes" xml:space="default">
                 <source>You can tell your friends about Zapna in two simple ways:</source>
@@ -748,8 +748,8 @@
                 <target>SmartSim inkludert pot</target>
             </trans-unit>
             <trans-unit id="183" translate="yes" reformat="yes" xml:space="default">
-                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming Zapna2 Customer. We welcome you to a new and huge mobile world. </source>
-                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli Zapna2 Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden. </target>
+                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming Zapna Customer. We welcome you to a new and huge mobile world. </source>
+                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli Zapna Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden. </target>
             </trans-unit>
             <trans-unit id="184" translate="yes" reformat="yes" xml:space="default">
                 <source>Your customer number is </source>
@@ -776,16 +776,16 @@
                 <target></target>
             </trans-unit>
             <trans-unit id="190" translate="yes" reformat="yes" xml:space="default">
-                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming Zapna2 Customer. We welcome you to a new and huge mobile world.</source>
-                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli Zapna2 Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden.</target>
+                <source>Thank you for ordering &lt;b&gt;%1%&lt;/b&gt; and becoming Zapna Customer. We welcome you to a new and huge mobile world.</source>
+                <target>Takk for bestilling &lt;b&gt;%1%&lt;/b&gt; og bli Zapna Kunden. Vi ønsker deg velkommen til en ny og stor mobile verden.</target>
             </trans-unit>
             <trans-unit id="191" translate="yes" reformat="yes" xml:space="default">
                 <source>Your Password have been saved.</source>
                 <target>Ditt passord er lagret.</target>
             </trans-unit>
             <trans-unit id="192" translate="yes" reformat="yes" xml:space="default">
-                <source>Zapna2 invitation</source>
-                <target>Zapna2 invitasjon</target>
+                <source>Zapna invitation</source>
+                <target>Zapna invitasjon</target>
             </trans-unit>
             <trans-unit id="193" translate="yes" reformat="yes" xml:space="default">
                 <source>Hi </source>
@@ -796,8 +796,8 @@
                 <target>Denne invitasjonen er sendt til deg med referanse til</target>
             </trans-unit>
             <trans-unit id="195" translate="yes" reformat="yes" xml:space="default">
-                <source>a user of Smartsim from the Zapna2.</source>
-                <target>en bruker av SmartSim fra Zapna2</target>
+                <source>a user of Smartsim from the Zapna.</source>
+                <target>en bruker av SmartSim fra Zapna</target>
             </trans-unit>
             <trans-unit id="196" translate="yes" reformat="yes" xml:space="default">
                 <source>Please click accept to start saving money immediately with Smartsim.</source>
@@ -816,8 +816,8 @@
                 <target>Les mer</target>
             </trans-unit>
             <trans-unit id="200" translate="yes" reformat="yes" xml:space="default">
-                <source>Your password has been changed. Please use the following information to login to your Zapna2 account.</source>
-                <target>Ditt passord er endret. Vennligst bruk følgende informasjon for å logge på Zapna2 konto.</target>
+                <source>Your password has been changed. Please use the following information to login to your Zapna account.</source>
+                <target>Ditt passord er endret. Vennligst bruk følgende informasjon for å logge på Zapna konto.</target>
             </trans-unit>
             <trans-unit id="201" translate="yes" reformat="yes" xml:space="default">
                 <source>Mobile Number: %s</source>
